-Softwareanwendung aktualisiert (Windows und Linux)

--- a/Webanwendung/templates/software.html
+++ b/Webanwendung/templates/software.html
@@ -40,7 +40,7 @@
         ExifTool application as an executable. Open a terminal, and navigate to
         the folder where the application is located, and run the following
         command:<br />
-        chmod +x ExifTool/Perl_ExifTool/exiftool
+        <b>chmod +x AII_Licensing_Linux/ExifTool/Perl_ExifTool/exiftool</b>
       </p>
       {% if not mobile %}
       <div class="download">
@@ -62,7 +62,17 @@
         mistakenly identifying the application as a virus. Open a terminal, and
         navigate to the folder where the application is located, and run the
         following command:<br />
-        -d com.apple.quarantine Linux_macOS.app
+        <b>-d com.apple.quarantine Linux_macOS.app</b>
+      </p>
+      <p>
+        You may need to run an additional command to declare the provided
+        ExifTool application as an executable. Open a terminal, and navigate to
+        the folder where the application is located, and run the following
+        command:<br />
+        <b
+          >chmod +x
+          Linux_macOS.app/Contents/MacOS/ExifTool/Perl_ExifTool/exiftool</b
+        >
       </p>
       {% if not mobile %}
       <div class="download">
