--- a/Webanwendung/static/css/licensing_tool.css
+++ b/Webanwendung/static/css/licensing_tool.css
@@ -44,6 +44,14 @@ input[type="submit"]:disabled {
   color: #666666;
 }
 
+input[type="file"]::file-selector-button {
+  border: 1px solid #999999;
+  border-color: #00b1aa;
+  background-color: #00b1aa;
+  color: #000000;
+  border-radius: 0.2em;
+}
+
 label {
   font-size: large;
   color: black;
