--- a/Webanwendung/templates/software.html
+++ b/Webanwendung/templates/software.html
@@ -23,11 +23,13 @@
       {% if not mobile %}
       <div class="download">
         <p>
-          Download Windows application:
-          <a href="javascript:void(0);" id="download_Windows">
-            AII_Licensing_Windows.zip
-          </a>
-          {% if windows_size %} ({{ windows_size }} MB) {% endif %}
+          <b>
+            Download Windows application:
+            <a href="javascript:void(0);" id="download_Windows">
+              AII_Licensing_Windows.zip
+            </a>
+            {% if windows_size %} ({{ windows_size }} MB) {% endif %}
+          </b>
         </p>
       </div>
       {% endif %} {% if mobile %}
@@ -45,11 +47,13 @@
       {% if not mobile %}
       <div class="download">
         <p>
-          Download Linux application:
-          <a href="javascript:void(0);" id="download_Linux">
-            AII_Licensing_Linux.zip
-          </a>
-          {% if linux_size %} ({{ linux_size }} MB) {% endif %}
+          <b
+            >Download Linux application:
+            <a href="javascript:void(0);" id="download_Linux">
+              AII_Licensing_Linux.zip
+            </a>
+            {% if linux_size %} ({{ linux_size }} MB) {% endif %}
+          </b>
         </p>
       </div>
       {% endif %} {% if mobile %}
@@ -77,11 +81,13 @@
       {% if not mobile %}
       <div class="download">
         <p>
-          Download macOS application:
-          <a href="javascript:void(0);" id="download_macOS">
-            AII_Licensing_macOS.zip
-          </a>
-          {% if macOS_size %} ({{ macOS_size }} MB) {% endif %}
+          <b>
+            Download macOS application:
+            <a href="javascript:void(0);" id="download_macOS">
+              AII_Licensing_macOS.zip
+            </a>
+            {% if macOS_size %} ({{ macOS_size }} MB) {% endif %}
+          </b>
         </p>
       </div>
       {% endif %} {% if mobile %}
